tests/sksl/errors/golden/ReturnMissingValue.glsl
### Compilation failed:

error: 2: expected function to return 'int'
1 error
